--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "phpspec/prophecy-phpunit": "^2.0",
     "phpunit/phpcov": "^8.2",
     "phpstan/phpstan": "^1.8",
-    "monolog/monolog": "^2.8"
+    "monolog/monolog": "^2.8",
+    "squizlabs/php_codesniffer": "^4.0"
   },
   "config": {
     "bin-dir": "bin"
