--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           extensions: mbstring
           tools: composer:v2
 
-      - name: "Install highest dependencies"
+      - name: "Install dependencies"
         run: "composer update --no-interaction --no-progress"
 
       - name: "Run PHPStan"
