--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
-          coverage: "none"
+          coverage: "xdebug"
           php-version: "${{ matrix.php-version }}"
 
       - name: "Install lowest dependencies"
@@ -41,7 +41,17 @@ jobs:
         run: "composer update --no-interaction --no-progress"
 
       - name: "Tests"
-        run: "bin/phpunit --testdox tests/unit/"
+        env:
+          XDEBUG_MODE: coverage
+        run: "bin/phpunit --testdox tests/unit/ --coverage-clover=clover.xml"
+
+      - name: Upload coverage results to Coveralls
+        if: ${{ matrix.dependencies == 'highest' && matrix['php-version'] == '8.1' }}
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          composer global require php-coveralls/php-coveralls
+          php-coveralls --coverage_clover=clover.xml -v --json_path=coveralls-upload.json
 
   static-analysis:
     name: "Static analysis (phpstan, phpcs)"
