--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "require": {
     "php": ">=7.2",
     "ext-dom": "*",
-    "guzzlehttp/guzzle": "^7.5"
+    "guzzlehttp/guzzle": "^6.5 || ^7.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
